[project]
name = "react-project-backend"
version = "0.1.0"
description = ""
package-mode = false
authors = [
    { name = "dmhd6219", email = "svyatoslavsvyatkin@yandex.ru" }
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "yookassa (>=3.5.0,<4.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
